--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
   build-dotnet-app:
 
     runs-on: ubuntu-latest
-    
+    defaults:
+      run:
+        working-directory: dotnet
 
 
     steps:
